[package]
name = "Simple-Arithmetic-Utilities"
version = "0.1.0"
edition = "2021"
description = "Functions that include simple arithmetic utilities (simple project)"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/jingfanfeng/Rust-Testing.git"
repository = "https://github.com/jingfanfeng/Rust-Testing.git"

[dependencies]
